save functiona djusted

--- a/src/preprocessing/process_BA_CODEX.ipynb
+++ b/src/preprocessing/process_BA_CODEX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,20 +73,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ry/jl4ll0zx1l709rh4r7_0cq6r0000gn/T/ipykernel_11364/373339322.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  training = pd.read_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/tonsil_training/B004_training_dryad.csv')\n"
+      "/var/folders/ry/jl4ll0zx1l709rh4r7_0cq6r0000gn/T/ipykernel_11364/3363050379.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  training = pd.read_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/tonsil_training/B004_training_dryad.csv', index_col=0)\n"
      ]
     }
    ],
    "source": [
-    "training = pd.read_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/tonsil_training/B004_training_dryad.csv')"
+    "training = pd.read_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/tonsil_training/B004_training_dryad.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "training_1, training_2 = train_test_split(training, test_size=0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MUC2</th>\n",
+       "      <th>SOX9</th>\n",
+       "      <th>MUC1</th>\n",
+       "      <th>CD31</th>\n",
+       "      <th>Synapto</th>\n",
+       "      <th>CD49f</th>\n",
+       "      <th>CD15</th>\n",
+       "      <th>CHGA</th>\n",
+       "      <th>CDX2</th>\n",
+       "      <th>ITLN1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Ki67</th>\n",
+       "      <th>CD49a</th>\n",
+       "      <th>CD163</th>\n",
+       "      <th>CD161</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>tissue</th>\n",
+       "      <th>cell_type_A</th>\n",
+       "      <th>donor</th>\n",
+       "      <th>unique_region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8616</th>\n",
+       "      <td>-0.151416</td>\n",
+       "      <td>0.186877</td>\n",
+       "      <td>-0.039645</td>\n",
+       "      <td>-0.245162</td>\n",
+       "      <td>2.161820</td>\n",
+       "      <td>0.690367</td>\n",
+       "      <td>-0.094140</td>\n",
+       "      <td>-0.035089</td>\n",
+       "      <td>-0.124209</td>\n",
+       "      <td>0.118164</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.124807</td>\n",
+       "      <td>-0.242165</td>\n",
+       "      <td>-0.273672</td>\n",
+       "      <td>-0.035746</td>\n",
+       "      <td>3256.0</td>\n",
+       "      <td>7206.0</td>\n",
+       "      <td>SB</td>\n",
+       "      <td>Enterocyte</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg001_SB_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43048</th>\n",
+       "      <td>-0.227804</td>\n",
+       "      <td>0.134401</td>\n",
+       "      <td>-0.288478</td>\n",
+       "      <td>-0.248523</td>\n",
+       "      <td>-0.333395</td>\n",
+       "      <td>-0.387918</td>\n",
+       "      <td>-0.094146</td>\n",
+       "      <td>-0.086598</td>\n",
+       "      <td>-0.008673</td>\n",
+       "      <td>-0.010440</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.129961</td>\n",
+       "      <td>2.753068</td>\n",
+       "      <td>1.011975</td>\n",
+       "      <td>-0.109719</td>\n",
+       "      <td>4942.0</td>\n",
+       "      <td>7713.0</td>\n",
+       "      <td>SB</td>\n",
+       "      <td>SmoothMuscle</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg003_SB_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49290-1</th>\n",
+       "      <td>-0.226757</td>\n",
+       "      <td>0.273123</td>\n",
+       "      <td>0.010246</td>\n",
+       "      <td>-0.048131</td>\n",
+       "      <td>-0.331009</td>\n",
+       "      <td>-0.483154</td>\n",
+       "      <td>-0.093440</td>\n",
+       "      <td>-0.066656</td>\n",
+       "      <td>-0.008018</td>\n",
+       "      <td>0.390780</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.155971</td>\n",
+       "      <td>1.251768</td>\n",
+       "      <td>-0.286061</td>\n",
+       "      <td>-0.063185</td>\n",
+       "      <td>8316.0</td>\n",
+       "      <td>4407.0</td>\n",
+       "      <td>SB</td>\n",
+       "      <td>SmoothMuscle</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg004_SB_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222393-2</th>\n",
+       "      <td>-0.304218</td>\n",
+       "      <td>-0.441068</td>\n",
+       "      <td>-0.488364</td>\n",
+       "      <td>-0.245246</td>\n",
+       "      <td>-0.249533</td>\n",
+       "      <td>-0.655897</td>\n",
+       "      <td>-0.296514</td>\n",
+       "      <td>-0.085493</td>\n",
+       "      <td>-0.303840</td>\n",
+       "      <td>-0.413878</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.270814</td>\n",
+       "      <td>-0.653250</td>\n",
+       "      <td>-0.299256</td>\n",
+       "      <td>-0.188083</td>\n",
+       "      <td>8498.0</td>\n",
+       "      <td>5007.0</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>Stroma</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg002_CL_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117525-2</th>\n",
+       "      <td>-0.241566</td>\n",
+       "      <td>-0.531978</td>\n",
+       "      <td>0.076762</td>\n",
+       "      <td>-0.253266</td>\n",
+       "      <td>-0.332260</td>\n",
+       "      <td>-0.574351</td>\n",
+       "      <td>-0.094142</td>\n",
+       "      <td>-0.087531</td>\n",
+       "      <td>-0.156569</td>\n",
+       "      <td>-0.434657</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.189399</td>\n",
+       "      <td>-0.531818</td>\n",
+       "      <td>-0.276096</td>\n",
+       "      <td>-0.129010</td>\n",
+       "      <td>8759.0</td>\n",
+       "      <td>5821.0</td>\n",
+       "      <td>SB</td>\n",
+       "      <td>Stroma</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg003_SB_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248132-1</th>\n",
+       "      <td>0.103583</td>\n",
+       "      <td>3.705640</td>\n",
+       "      <td>0.619619</td>\n",
+       "      <td>-0.243033</td>\n",
+       "      <td>-0.036856</td>\n",
+       "      <td>1.185025</td>\n",
+       "      <td>-0.285600</td>\n",
+       "      <td>-0.031178</td>\n",
+       "      <td>0.882218</td>\n",
+       "      <td>-0.450795</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.482421</td>\n",
+       "      <td>-0.736535</td>\n",
+       "      <td>-0.316265</td>\n",
+       "      <td>-0.144689</td>\n",
+       "      <td>2683.0</td>\n",
+       "      <td>3115.0</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>TA</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg003_CL_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218889-2</th>\n",
+       "      <td>0.279789</td>\n",
+       "      <td>-0.027508</td>\n",
+       "      <td>-0.383640</td>\n",
+       "      <td>-0.234653</td>\n",
+       "      <td>0.836268</td>\n",
+       "      <td>-0.568663</td>\n",
+       "      <td>-0.299031</td>\n",
+       "      <td>-0.086472</td>\n",
+       "      <td>0.343674</td>\n",
+       "      <td>-0.438052</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.096788</td>\n",
+       "      <td>-0.179642</td>\n",
+       "      <td>-0.295332</td>\n",
+       "      <td>-0.142992</td>\n",
+       "      <td>482.0</td>\n",
+       "      <td>1223.0</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>Nerve</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg004_CL_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26421</th>\n",
+       "      <td>0.722909</td>\n",
+       "      <td>0.246961</td>\n",
+       "      <td>0.458167</td>\n",
+       "      <td>-0.250908</td>\n",
+       "      <td>-0.226592</td>\n",
+       "      <td>1.284252</td>\n",
+       "      <td>-0.088614</td>\n",
+       "      <td>-0.076099</td>\n",
+       "      <td>-0.161810</td>\n",
+       "      <td>-0.193613</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.228034</td>\n",
+       "      <td>-0.033671</td>\n",
+       "      <td>-0.281371</td>\n",
+       "      <td>0.025248</td>\n",
+       "      <td>4380.0</td>\n",
+       "      <td>6273.0</td>\n",
+       "      <td>SB</td>\n",
+       "      <td>Enterocyte</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg003_SB_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97858-1</th>\n",
+       "      <td>1.180323</td>\n",
+       "      <td>0.090999</td>\n",
+       "      <td>0.526988</td>\n",
+       "      <td>-0.253510</td>\n",
+       "      <td>-0.325448</td>\n",
+       "      <td>-0.431116</td>\n",
+       "      <td>-0.073299</td>\n",
+       "      <td>-0.083927</td>\n",
+       "      <td>-0.103998</td>\n",
+       "      <td>-0.215978</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.399046</td>\n",
+       "      <td>-0.568923</td>\n",
+       "      <td>-0.269182</td>\n",
+       "      <td>-0.124678</td>\n",
+       "      <td>3980.0</td>\n",
+       "      <td>7113.0</td>\n",
+       "      <td>SB</td>\n",
+       "      <td>TA</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg003_SB_B004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213812</th>\n",
+       "      <td>-0.302229</td>\n",
+       "      <td>-0.284368</td>\n",
+       "      <td>-0.248169</td>\n",
+       "      <td>-0.237995</td>\n",
+       "      <td>-0.263219</td>\n",
+       "      <td>-0.534770</td>\n",
+       "      <td>-0.299033</td>\n",
+       "      <td>-0.107882</td>\n",
+       "      <td>-0.183512</td>\n",
+       "      <td>-0.450793</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.226870</td>\n",
+       "      <td>1.552214</td>\n",
+       "      <td>-0.284889</td>\n",
+       "      <td>-0.092167</td>\n",
+       "      <td>3127.0</td>\n",
+       "      <td>7228.0</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>SmoothMuscle</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>reg001_CL_B004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>62072 rows × 54 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              MUC2      SOX9      MUC1      CD31   Synapto     CD49f  \\\n",
+       "8616     -0.151416  0.186877 -0.039645 -0.245162  2.161820  0.690367   \n",
+       "43048    -0.227804  0.134401 -0.288478 -0.248523 -0.333395 -0.387918   \n",
+       "49290-1  -0.226757  0.273123  0.010246 -0.048131 -0.331009 -0.483154   \n",
+       "222393-2 -0.304218 -0.441068 -0.488364 -0.245246 -0.249533 -0.655897   \n",
+       "117525-2 -0.241566 -0.531978  0.076762 -0.253266 -0.332260 -0.574351   \n",
+       "...            ...       ...       ...       ...       ...       ...   \n",
+       "248132-1  0.103583  3.705640  0.619619 -0.243033 -0.036856  1.185025   \n",
+       "218889-2  0.279789 -0.027508 -0.383640 -0.234653  0.836268 -0.568663   \n",
+       "26421     0.722909  0.246961  0.458167 -0.250908 -0.226592  1.284252   \n",
+       "97858-1   1.180323  0.090999  0.526988 -0.253510 -0.325448 -0.431116   \n",
+       "213812   -0.302229 -0.284368 -0.248169 -0.237995 -0.263219 -0.534770   \n",
+       "\n",
+       "              CD15      CHGA      CDX2     ITLN1  ...      Ki67     CD49a  \\\n",
+       "8616     -0.094140 -0.035089 -0.124209  0.118164  ... -0.124807 -0.242165   \n",
+       "43048    -0.094146 -0.086598 -0.008673 -0.010440  ... -0.129961  2.753068   \n",
+       "49290-1  -0.093440 -0.066656 -0.008018  0.390780  ... -0.155971  1.251768   \n",
+       "222393-2 -0.296514 -0.085493 -0.303840 -0.413878  ... -0.270814 -0.653250   \n",
+       "117525-2 -0.094142 -0.087531 -0.156569 -0.434657  ... -0.189399 -0.531818   \n",
+       "...            ...       ...       ...       ...  ...       ...       ...   \n",
+       "248132-1 -0.285600 -0.031178  0.882218 -0.450795  ...  0.482421 -0.736535   \n",
+       "218889-2 -0.299031 -0.086472  0.343674 -0.438052  ... -0.096788 -0.179642   \n",
+       "26421    -0.088614 -0.076099 -0.161810 -0.193613  ... -0.228034 -0.033671   \n",
+       "97858-1  -0.073299 -0.083927 -0.103998 -0.215978  ...  0.399046 -0.568923   \n",
+       "213812   -0.299033 -0.107882 -0.183512 -0.450793  ... -0.226870  1.552214   \n",
+       "\n",
+       "             CD163     CD161       x       y  tissue   cell_type_A  donor  \\\n",
+       "8616     -0.273672 -0.035746  3256.0  7206.0      SB    Enterocyte   B004   \n",
+       "43048     1.011975 -0.109719  4942.0  7713.0      SB  SmoothMuscle   B004   \n",
+       "49290-1  -0.286061 -0.063185  8316.0  4407.0      SB  SmoothMuscle   B004   \n",
+       "222393-2 -0.299256 -0.188083  8498.0  5007.0      CL        Stroma   B004   \n",
+       "117525-2 -0.276096 -0.129010  8759.0  5821.0      SB        Stroma   B004   \n",
+       "...            ...       ...     ...     ...     ...           ...    ...   \n",
+       "248132-1 -0.316265 -0.144689  2683.0  3115.0      CL            TA   B004   \n",
+       "218889-2 -0.295332 -0.142992   482.0  1223.0      CL         Nerve   B004   \n",
+       "26421    -0.281371  0.025248  4380.0  6273.0      SB    Enterocyte   B004   \n",
+       "97858-1  -0.269182 -0.124678  3980.0  7113.0      SB            TA   B004   \n",
+       "213812   -0.284889 -0.092167  3127.0  7228.0      CL  SmoothMuscle   B004   \n",
+       "\n",
+       "           unique_region  \n",
+       "8616      reg001_SB_B004  \n",
+       "43048     reg003_SB_B004  \n",
+       "49290-1   reg004_SB_B004  \n",
+       "222393-2  reg002_CL_B004  \n",
+       "117525-2  reg003_SB_B004  \n",
+       "...                  ...  \n",
+       "248132-1  reg003_CL_B004  \n",
+       "218889-2  reg004_CL_B004  \n",
+       "26421     reg003_SB_B004  \n",
+       "97858-1   reg003_SB_B004  \n",
+       "213812    reg001_CL_B004  \n",
+       "\n",
+       "[62072 rows x 54 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_1.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/stellar_test/B004_training_dryad_1.csv', index=False)\n",
+    "training_2.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/stellar_test/B004_training_dryad_2.csv', index=False)\n",
+    "training_2.drop(columns=['cell_type_A'], inplace=True)\n",
+    "training_2.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/stellar_test/B004_training_dryad_2_unannotated.csv', index=False)"
    ]
   },
   {
