--- a/src/preprocessing/process_cHL_CODEX.ipynb
+++ b/src/preprocessing/process_cHL_CODEX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "[145161 rows x 54 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,378 @@
        "[145161 rows x 53 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BCL.2</th>\n",
+       "      <th>CCR6</th>\n",
+       "      <th>CD11b</th>\n",
+       "      <th>CD11c</th>\n",
+       "      <th>CD15</th>\n",
+       "      <th>CD16</th>\n",
+       "      <th>CD162</th>\n",
+       "      <th>CD163</th>\n",
+       "      <th>CD2</th>\n",
+       "      <th>CD20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TCRb</th>\n",
+       "      <th>Tim.3</th>\n",
+       "      <th>VISA</th>\n",
+       "      <th>Vimentin</th>\n",
+       "      <th>a.SMA</th>\n",
+       "      <th>b.Catenin</th>\n",
+       "      <th>cellSize</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>cell_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.792642</td>\n",
+       "      <td>0.617038</td>\n",
+       "      <td>0.000089</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>0.000029</td>\n",
+       "      <td>0.097688</td>\n",
+       "      <td>0.007772</td>\n",
+       "      <td>0.005356</td>\n",
+       "      <td>0.159593</td>\n",
+       "      <td>0.754060</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.159092</td>\n",
+       "      <td>0.006533</td>\n",
+       "      <td>0.000454</td>\n",
+       "      <td>0.139826</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.057827</td>\n",
+       "      <td>42</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.127394</td>\n",
+       "      <td>0.062173</td>\n",
+       "      <td>0.660572</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.172885</td>\n",
+       "      <td>0.006180</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.058234</td>\n",
+       "      <td>0.111610</td>\n",
+       "      <td>0.182849</td>\n",
+       "      <td>0.899717</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.267198</td>\n",
+       "      <td>63</td>\n",
+       "      <td>1767</td>\n",
+       "      <td>2</td>\n",
+       "      <td>DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.060620</td>\n",
+       "      <td>0.134818</td>\n",
+       "      <td>0.298522</td>\n",
+       "      <td>0.083348</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.182152</td>\n",
+       "      <td>0.000210</td>\n",
+       "      <td>0.001401</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.004900</td>\n",
+       "      <td>0.454174</td>\n",
+       "      <td>0.069180</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.104686</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2545</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.012896</td>\n",
+       "      <td>0.287698</td>\n",
+       "      <td>0.268121</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.124361</td>\n",
+       "      <td>0.016805</td>\n",
+       "      <td>0.208045</td>\n",
+       "      <td>0.037673</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.052230</td>\n",
+       "      <td>0.148087</td>\n",
+       "      <td>0.228221</td>\n",
+       "      <td>0.053541</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.283151</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2899</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Monocyte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.201057</td>\n",
+       "      <td>0.110590</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.745316</td>\n",
+       "      <td>0.013513</td>\n",
+       "      <td>0.292691</td>\n",
+       "      <td>0.039192</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.597647</td>\n",
+       "      <td>0.013284</td>\n",
+       "      <td>0.000454</td>\n",
+       "      <td>0.234038</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>61</td>\n",
+       "      <td>3657</td>\n",
+       "      <td>3</td>\n",
+       "      <td>CD4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145156</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.523642</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.182044</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.055458</td>\n",
+       "      <td>0.019692</td>\n",
+       "      <td>0.004761</td>\n",
+       "      <td>0.064028</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.067239</td>\n",
+       "      <td>0.082646</td>\n",
+       "      <td>0.671506</td>\n",
+       "      <td>0.455424</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.040877</td>\n",
+       "      <td>119</td>\n",
+       "      <td>2882</td>\n",
+       "      <td>8004</td>\n",
+       "      <td>Neutrophil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145157</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.210238</td>\n",
+       "      <td>0.313372</td>\n",
+       "      <td>0.076860</td>\n",
+       "      <td>0.986128</td>\n",
+       "      <td>0.587575</td>\n",
+       "      <td>0.044324</td>\n",
+       "      <td>0.053227</td>\n",
+       "      <td>0.099109</td>\n",
+       "      <td>0.090999</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.069040</td>\n",
+       "      <td>0.077637</td>\n",
+       "      <td>0.327586</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.068794</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2893</td>\n",
+       "      <td>8004</td>\n",
+       "      <td>Neutrophil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145158</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.620555</td>\n",
+       "      <td>0.000089</td>\n",
+       "      <td>0.025792</td>\n",
+       "      <td>0.000029</td>\n",
+       "      <td>0.255168</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.829552</td>\n",
+       "      <td>0.068726</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.806268</td>\n",
+       "      <td>0.250223</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.462049</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.086740</td>\n",
+       "      <td>92</td>\n",
+       "      <td>2327</td>\n",
+       "      <td>8004</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145159</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.597890</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.099606</td>\n",
+       "      <td>0.000029</td>\n",
+       "      <td>0.370193</td>\n",
+       "      <td>0.012604</td>\n",
+       "      <td>0.032381</td>\n",
+       "      <td>0.571802</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.362010</td>\n",
+       "      <td>0.142534</td>\n",
+       "      <td>0.086661</td>\n",
+       "      <td>0.963140</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.167498</td>\n",
+       "      <td>184</td>\n",
+       "      <td>3371</td>\n",
+       "      <td>8003</td>\n",
+       "      <td>CD4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145160</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.030481</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.083704</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.946296</td>\n",
+       "      <td>0.010143</td>\n",
+       "      <td>0.013962</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.373048</td>\n",
+       "      <td>0.000454</td>\n",
+       "      <td>0.110449</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>53</td>\n",
+       "      <td>7166</td>\n",
+       "      <td>8006</td>\n",
+       "      <td>M2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>145161 rows × 53 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           BCL.2      CCR6     CD11b     CD11c      CD15      CD16     CD162  \\\n",
+       "0       0.792642  0.617038  0.000089  0.000040  0.000029  0.097688  0.007772   \n",
+       "1       0.000000  0.127394  0.062173  0.660572  0.000000  0.000000  0.172885   \n",
+       "2       0.060620  0.134818  0.298522  0.083348  0.000000  0.182152  0.000210   \n",
+       "3       0.000000  0.012896  0.287698  0.268121  0.000000  0.124361  0.016805   \n",
+       "4       0.201057  0.110590  0.000000  0.000000  0.000000  0.000000  0.745316   \n",
+       "...          ...       ...       ...       ...       ...       ...       ...   \n",
+       "145156  0.000000  0.523642  1.000000  0.182044  1.000000  1.000000  0.055458   \n",
+       "145157  0.000000  0.210238  0.313372  0.076860  0.986128  0.587575  0.044324   \n",
+       "145158  0.000000  0.620555  0.000089  0.025792  0.000029  0.255168  0.000000   \n",
+       "145159  0.000000  0.597890  0.000000  0.099606  0.000029  0.370193  0.012604   \n",
+       "145160  0.000000  0.030481  0.000000  0.083704  0.000058  1.000000  0.000000   \n",
+       "\n",
+       "           CD163       CD2      CD20  ...      TCRb     Tim.3      VISA  \\\n",
+       "0       0.005356  0.159593  0.754060  ...  0.159092  0.006533  0.000454   \n",
+       "1       0.006180  0.000000  0.000000  ...  0.058234  0.111610  0.182849   \n",
+       "2       0.001401  0.000000  0.000000  ...  0.000000  0.004900  0.454174   \n",
+       "3       0.208045  0.037673  0.000019  ...  0.052230  0.148087  0.228221   \n",
+       "4       0.013513  0.292691  0.039192  ...  0.597647  0.013284  0.000454   \n",
+       "...          ...       ...       ...  ...       ...       ...       ...   \n",
+       "145156  0.019692  0.004761  0.064028  ...  0.067239  0.082646  0.671506   \n",
+       "145157  0.053227  0.099109  0.090999  ...  0.069040  0.077637  0.327586   \n",
+       "145158  0.000000  0.829552  0.068726  ...  0.806268  0.250223  1.000000   \n",
+       "145159  0.032381  0.571802  1.000000  ...  0.362010  0.142534  0.086661   \n",
+       "145160  0.946296  0.010143  0.013962  ...  0.000000  0.373048  0.000454   \n",
+       "\n",
+       "        Vimentin  a.SMA  b.Catenin  cellSize     x     y   cell_type  \n",
+       "0       0.139826    0.0   0.057827        42    75     2           B  \n",
+       "1       0.899717    0.0   0.267198        63  1767     2          DC  \n",
+       "2       0.069180    0.0   0.104686        29  2545     2          NK  \n",
+       "3       0.053541    1.0   0.283151        64  2899     3    Monocyte  \n",
+       "4       0.234038    0.0   0.000000        61  3657     3         CD4  \n",
+       "...          ...    ...        ...       ...   ...   ...         ...  \n",
+       "145156  0.455424    0.0   0.040877       119  2882  8004  Neutrophil  \n",
+       "145157  1.000000    0.0   0.068794        82  2893  8004  Neutrophil  \n",
+       "145158  0.462049    0.0   0.086740        92  2327  8004       Other  \n",
+       "145159  0.963140    0.0   0.167498       184  3371  8003         CD4  \n",
+       "145160  0.110449    0.0   0.000000        53  7166  8006          M2  \n",
+       "\n",
+       "[145161 rows x 53 columns]"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
